-Adding a Login Link on the Teaser Page and the Header -"Correction" of the tagcloud bug -Truncate of the Baseline and description in project list

--- a/media/css/project.css
+++ b/media/css/project.css
@@ -1499,6 +1499,9 @@ ul#themes_tags li.tagit-choice {
     font-style:italic;
     color:white;
     
+    top:-19px;
+    left:-6px;
+    
     position:relative;
 }
 
