--- a/media/css/white_page.css
+++ b/media/css/white_page.css
@@ -246,6 +246,8 @@
 	right:-19px;
 	z-index:5000;
 	background-color:#e4e4e4;
+    
+    height:auto !important;
 
 
 }
